// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders empty and filled 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EDE0D1",
        "borderRadius": 16,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "minHeight": 44,
        "paddingHorizontal": 12,
      },
      false,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#6B6058",
          "fontSize": 18,
        },
        undefined,
        {
          "fontFamily": "Feather",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        undefined,
      ]
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="Search"
    autoCapitalize="none"
    autoCorrect={false}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search"
    placeholderTextColor="#6B6058"
    returnKeyType="search"
    style={
      {
        "color": "#333333",
        "flex": 1,
        "fontFamily": "Nunito-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "paddingVertical": 8,
      }
    }
    value=""
  />
</View>
`;

exports[`SearchBar renders empty and filled 2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EDE0D1",
        "borderRadius": 16,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "minHeight": 44,
        "paddingHorizontal": 12,
      },
      false,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#6B6058",
          "fontSize": 18,
        },
        undefined,
        {
          "fontFamily": "Feather",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        undefined,
      ]
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="Search"
    autoCapitalize="none"
    autoCorrect={false}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search"
    placeholderTextColor="#6B6058"
    returnKeyType="search"
    style={
      {
        "color": "#333333",
        "flex": 1,
        "fontFamily": "Nunito-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "paddingVertical": 8,
      }
    }
    value="aarav"
  />
  <View
    accessibilityLabel="Clear search field"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={12}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#6B6058",
            "fontSize": 18,
          },
          undefined,
          {
            "fontFamily": "Feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
